--- a/sbb/build.gradle
+++ b/sbb/build.gradle
@@ -33,7 +33,11 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok' 
     annotationProcessor 'org.projectlombok:lombok' 
 	runtimeOnly 'com.mysql:mysql-connector-j'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' 
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    testImplementation 'org.junit.jupiter:junit-jupiter' 
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	
 }
 
