--- a/sbb/src/main/resources/application.properties
+++ b/sbb/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-spring.application.name=sbb
+#spring.application.name=sbb
 # DATABASE 
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/springdb	
-spring.datasource.username= root
-spring.datasource.password= 7984	
+spring.datasource.url=jdbc:mysql://localhost:3306/springdb
+spring.datasource.username=root
+spring.datasource.password=7984
 
 # JPA
-spring.jpa.properties.hibernate.show_sql = ture
-spring.jpa.properties.hibernate.format_sql= true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
