--- a/sbb/src/main/resources/application.properties
+++ b/sbb/src/main/resources/application.properties
@@ -4,9 +4,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/springdb
 spring.datasource.username=root
 spring.datasource.password=7984
+spring.security.user.password: 33d6b41d-7f47-4a88-b1f0-c2d651e46b13
 
 # JPA
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
