--- a/sbb/src/main/resources/application.properties
+++ b/sbb/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #spring.application.name=sbb
 # DATABASE 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/springdb
-spring.datasource.username=root
-spring.datasource.password=7984
+spring.datasource.url=jdbc:mysql://ls-265c09c57aeb96031974c7669796638946122e07.c94uksysytgf.ap-northeast-2.rds.amazonaws.com/dbmaster
+spring.datasource.username=dbmasteruser
+spring.datasource.password=shin7984
 spring.security.user.password: 33d6b41d-7f47-4a88-b1f0-c2d651e46b13
 
 # JPA
